--- a/In_Class_Assignments_DC.ipynb
+++ b/In_Class_Assignments_DC.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPyVUDUOltMgTyEeoTEXd/V",
+      "authorship_tag": "ABX9TyNP4xuFUzr6FA6YID+Ccrht",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uKXPIt7k-1sR",
-        "outputId": "6f20b502-fb09-4886-e365-3421617ec67e"
+        "outputId": "b3d87cff-a4c0-4a70-e507-e267d889c0e0"
       },
       "outputs": [
         {
@@ -42,9 +42,9 @@
           "name": "stdout",
           "text": [
             "Enter the total Sales: 12000\n",
-            "Sales: 12000.0$\n",
-            "Cost of Goods Sold: 4800.0$\n",
-            "Gross Profit: 7200.0$\n"
+            "Sales: $12000.0\n",
+            "Cost of Goods Sold: $4800.0\n",
+            "Gross Profit: $7200.0\n"
           ]
         }
       ],
@@ -54,19 +54,132 @@
         "COGS = .4 * Sales\n",
         "GP = Sales - COGS\n",
         "\n",
-        "print(f\"Sales: {Sales}$\")\n",
-        "print(f\"Cost of Goods Sold: {COGS}$\")\n",
-        "print(f\"Gross Profit: {GP}$\")"
+        "print(f\"Sales: ${Sales}\")\n",
+        "print(f\"Cost of Goods Sold: ${COGS}\")\n",
+        "print(f\"Gross Profit: ${GP}\")"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "Sales = float(input(\"Enter the total Sales: \"))\n",
+        "TaxRate = float(input(\"Enter tax rate: \"))\n",
+        "\n",
+        "taxes = Sales * .3\n",
+        "COGS = 4800\n",
+        "GP = Sales - COGS\n",
+        "NI = GP - taxes\n",
+        "\n",
+        "print(f\"Sales: ${Sales}\")\n",
+        "print(f\"Cost of Goods Sold: ${COGS}\")\n",
+        "print(f\"Gross Profit: ${GP}\")\n",
+        "print(f\"Taxes: ${taxes}\")\n",
+        "print(f\"Net Income: ${NI}\")"
+      ],
       "metadata": {
-        "id": "B7OMj9EICINu"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B7OMj9EICINu",
+        "outputId": "4c02eee4-bf10-495d-bde6-28bd0a3587cd"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the total Sales: 12000\n",
+            "Enter tax rate: .3\n",
+            "Sales: $12000.0\n",
+            "Cost of Goods Sold: $4800\n",
+            "Gross Profit: $7200.0\n",
+            "Taxes: $3600.0\n",
+            "Net Income: $3600.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num_1 = float(input(\"Number 1: \"))\n",
+        "num_2 = float(input(\"Number 2: \"))\n",
+        "Symbol = input(\"Mathematical Symbol: \")\n",
+        "\n",
+        "if Symbol == \"+\":\n",
+        "  print(num_1 + num_2)\n",
+        "elif Symbol == \"-\":\n",
+        "  print(num_1 - num_2)\n",
+        "elif Symbol == \"/\":\n",
+        "  print(num_1 / num_2)\n",
+        "elif Symbol == \"*\":\n",
+        "  print(num_1 * num_2)\n",
+        "elif Symbol == \"**\":\n",
+        "  print(num_1 ** num_2)\n",
+        "elif Symbol == \"%\":\n",
+        "  print(num_1 % num_2)\n",
+        "else:\n",
+        "  print(\"Invalid Operation\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s_2vWjMeBCa-",
+        "outputId": "19b6e601-1d30-4616-f5c0-372a8ff685ae"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number 1: 10\n",
+            "Number 2: 3\n",
+            "Mathematical Symbol: %\n",
+            "1.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Hour Fee\")\n",
+        "for p_hours in range (1,9):\n",
+        "  cost = (p_hours * 2.5) + 5\n",
+        "  if cost < 10:\n",
+        "    cost = 10.0\n",
+        "  elif cost > 20:\n",
+        "    cost = 20.0\n",
+        "  print(f\"{p_hours}: ${cost} \")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eH8utmYQtd5f",
+        "outputId": "e77cace2-ac76-4e91-ac32-6c4e776e219f"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hour Fee\n",
+            "1: $10.0 \n",
+            "2: $10.0 \n",
+            "3: $12.5 \n",
+            "4: $15.0 \n",
+            "5: $17.5 \n",
+            "6: $20.0 \n",
+            "7: $20.0 \n",
+            "8: $20.0 \n"
+          ]
+        }
+      ]
     }
   ]
 }
