--- a/In_Class_Assignments_DC.ipynb
+++ b/In_Class_Assignments_DC.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNP4xuFUzr6FA6YID+Ccrht",
+      "authorship_tag": "ABX9TyPL1M4VTENctamEXHuT04sb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -162,7 +162,7 @@
         "id": "eH8utmYQtd5f",
         "outputId": "e77cace2-ac76-4e91-ac32-6c4e776e219f"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -177,6 +177,46 @@
             "6: $20.0 \n",
             "7: $20.0 \n",
             "8: $20.0 \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ticket = 10\n",
+        "fixed_costs = 200\n",
+        "default_attendance = 20\n",
+        "\n",
+        "for ads in range (0, 201, 25):\n",
+        "  attendance = 2 * (ads ** .5)\n",
+        "  revenue = (round(attendance) + default_attendance) * ticket\n",
+        "  costs = fixed_costs + ads\n",
+        "  profit = revenue - costs\n",
+        "  print(f\"Ad ${ads}    Profit ${profit}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oWnw5ZvR-aNI",
+        "outputId": "da7a2cdb-8015-42d0-a12f-4db0f5591e4b"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ad $0    Profit $0\n",
+            "Ad $25    Profit $75\n",
+            "Ad $50    Profit $90\n",
+            "Ad $75    Profit $95\n",
+            "Ad $100    Profit $100\n",
+            "Ad $125    Profit $95\n",
+            "Ad $150    Profit $90\n",
+            "Ad $175    Profit $85\n",
+            "Ad $200    Profit $80\n"
           ]
         }
       ]
