--- a/In_Class_Assignments_DC.ipynb
+++ b/In_Class_Assignments_DC.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPL1M4VTENctamEXHuT04sb",
+      "authorship_tag": "ABX9TyMM6Qz76stg12YPhBIAa+Nl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -200,9 +200,90 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oWnw5ZvR-aNI",
-        "outputId": "da7a2cdb-8015-42d0-a12f-4db0f5591e4b"
+        "outputId": "e63d8536-8cbd-45b0-8212-140040ba53ca"
       },
-      "execution_count": 27,
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ad $0    Profit $0\n",
+            "Ad $25    Profit $75\n",
+            "Ad $50    Profit $90\n",
+            "Ad $75    Profit $95\n",
+            "Ad $100    Profit $100\n",
+            "Ad $125    Profit $95\n",
+            "Ad $150    Profit $90\n",
+            "Ad $175    Profit $85\n",
+            "Ad $200    Profit $80\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Hour Fee\")\n",
+        "p_hours = 1\n",
+        "while p_hours < 9:\n",
+        "  cost = (p_hours * 2.5) + 5\n",
+        "  if cost < 10:\n",
+        "    cost = 10.0\n",
+        "  elif cost > 20:\n",
+        "    cost = 20.0\n",
+        "  print(f\"{p_hours}: ${cost} \")\n",
+        "  p_hours += 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "H9xVxVljiwdn",
+        "outputId": "551cdf44-6624-481b-df01-6bd8ad203024"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hour Fee\n",
+            "1: $10.0 \n",
+            "2: $10.0 \n",
+            "3: $12.5 \n",
+            "4: $15.0 \n",
+            "5: $17.5 \n",
+            "6: $20.0 \n",
+            "7: $20.0 \n",
+            "8: $20.0 \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ticket = 10\n",
+        "fixed_costs = 200\n",
+        "default_attendance = 20\n",
+        "ads = 0\n",
+        "while ads <= 200:\n",
+        "  attendance = 2 * (ads ** .5)\n",
+        "  revenue = (round(attendance) + default_attendance) * ticket\n",
+        "  costs = fixed_costs + ads\n",
+        "  profit = revenue - costs\n",
+        "  print(f\"Ad ${ads}    Profit ${profit}\")\n",
+        "  ads += 25"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-lAGfMaajtRM",
+        "outputId": "092ca1a6-7b9e-4134-83c7-edb0deb56b5c"
+      },
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
