--- a/In_Class_Assignments_DC.ipynb
+++ b/In_Class_Assignments_DC.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMM6Qz76stg12YPhBIAa+Nl",
+      "authorship_tag": "ABX9TyOOVgXJaZpgmYOgV5H8Q8x/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -202,7 +202,7 @@
         "id": "oWnw5ZvR-aNI",
         "outputId": "e63d8536-8cbd-45b0-8212-140040ba53ca"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -242,7 +242,7 @@
         "id": "H9xVxVljiwdn",
         "outputId": "551cdf44-6624-481b-df01-6bd8ad203024"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,7 +283,7 @@
         "id": "-lAGfMaajtRM",
         "outputId": "092ca1a6-7b9e-4134-83c7-edb0deb56b5c"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -301,6 +301,36 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "start = input(\"Do you want to play the game? (y/n)\")\n",
+        "import random\n",
+        "while start == \"y\":\n",
+        "  computer_move = random.choice([\"rock\", \"paper\", \"scissors\"])\n",
+        "  your_move = input(\"Your Move: \")\n",
+        "  print(f\"Computers Move: {computer_move}\")\n",
+        "\n",
+        "  if your_move == computer_move:\n",
+        "    print(\"Draw\")\n",
+        "\n",
+        "  elif your_move == \"rock\" and computer_move == \"scissors\":\n",
+        "    print(\"You Win!\")\n",
+        "  elif your_move == \"scissors\" and computer_move == \"paper\":\n",
+        "    print(\"You Win!\")\n",
+        "  elif your_move == \"paper\" and computer_move == \"rock\":\n",
+        "    print(\"You Win!\")\n",
+        "  else:\n",
+        "    print(\"You Lose!\")\n",
+        "\n",
+        "  start = input(\"Do you want to play again? (y/n)\")"
+      ],
+      "metadata": {
+        "id": "gO-r93mf2YlO"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
