--- a/In_Class_Assignments_DC.ipynb
+++ b/In_Class_Assignments_DC.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOOVgXJaZpgmYOgV5H8Q8x/",
+      "authorship_tag": "ABX9TyNofMinHmGRFpXUgf9/SyXF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -331,6 +331,137 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = []\n",
+        "num = int(input(\"Enter a Number: \"))\n",
+        "while num != 0:\n",
+        "  numbers.append(num)\n",
+        "  num = int(input(\"Enter another Number: \"))\n",
+        "\n",
+        "numbers.sort(reverse=True)\n",
+        "print(numbers)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lHK4-OHK0iaO",
+        "outputId": "8e82f9c8-66e5-4c40-f1fe-fae4c95e263e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a Number: 3\n",
+            "Enter another Number: 4\n",
+            "Enter another Number: 5\n",
+            "Enter another Number: 0\n",
+            "[5, 4, 3]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "weights = [10.0, 9.9, 10.1, 10.05]\n",
+        "\n",
+        "print(sum(weights)/len(weights))\n",
+        "print(max(weights))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vY95OrXU5yhU",
+        "outputId": "0e5e85be-a824-406f-850d-5ef61824e402"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10.0125\n",
+            "10.1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p_id = input(\"Enter Product ID: \")\n",
+        "d = {\n",
+        "    \"P-01\": 9.95,\n",
+        "    \"P-02\": 10.50,\n",
+        "}\n",
+        "if p_id in d:\n",
+        "  print(f\"{p_id}, ${d[p_id]}\")\n",
+        "else:\n",
+        "  print(f\"Product {p_id}: Not found\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tBRxhEiOjmmT",
+        "outputId": "8e390222-ebc7-4e0a-b8f5-289481f731b9"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter Product ID: P-01\n",
+            "P-01, $9.95\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "names = {}\n",
+        "\n",
+        "while True:\n",
+        "  name = input(\"Enter a name:\")\n",
+        "  if name == \"\":\n",
+        "    break\n",
+        "  if name in names:\n",
+        "    names[name] += 1\n",
+        "  else:\n",
+        "    names[name] = 1\n",
+        "print(names)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AiCUNoxRr2zN",
+        "outputId": "3003e770-17fc-4194-ba20-1e04a49f9945"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a name:bob\n",
+            "Enter a name:bob\n",
+            "Enter a name:o\n",
+            "Enter a name:bob\n",
+            "Enter a name:\n",
+            "{'bob': 3, 'o': 1}\n"
+          ]
+        }
+      ]
     }
   ]
 }
